<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="webmd.mmu.ac.uk.foodhygieneratingsapp.MainActivity"
   tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_label"
        android:id="@+id/textView"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textAlignment="center"
        android:singleLine="true"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        android:textSize="16sp"
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:singleLine="false"
        android:textColor="#000000"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_button"
        android:id="@+id/button"
        android:onClick="name_search_onclick"
        android:layout_above="@+id/button2"
        android:layout_alignParentEnd="true"
        android:background="@android:color/black"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postcode_label"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:id="@+id/textView3"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postcode_button"
        android:id="@+id/button2"
        android:onClick="postcode_search_onclick"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:background="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_label"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:id="@+id/textView4"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_location_button"
        android:id="@+id/button3"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:onClick="current_loca_onclick"
        android:background="@android:color/black"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/most_recent_label"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:id="@+id/textView5"
        android:layout_above="@+id/button3"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/most_recent_button"
        android:id="@+id/button4"
        android:onClick="most_recent_onclick"
        android:layout_above="@+id/scrollView"
        android:layout_toEndOf="@+id/editText2"
        android:background="@android:color/black"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_button"
        android:id="@+id/button5"
        android:onClick="clear_onclick"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        android:layout_above="@+id/textView5"
        android:layout_alignStart="@+id/button" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="horizontal|vertical"
        android:id="@+id/scrollView"
        android:scrollbarStyle="outsideOverlay"
        android:layout_below="@+id/button3"
        android:layout_alignParentStart="true" >

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal|vertical"
            android:id="@+id/horizontalScrollView">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tableLayout1"
                android:visibility="visible"
                android:layout_alignParentStart="true"></TableLayout>
        </HorizontalScrollView>
    </ScrollView>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:contentDescription="@string/maps_button"
        android:layout_alignBottom="@+id/button4"
        android:src="@drawable/google_maps"
        android:scaleType="fitCenter"
        android:onClick="map_onclick"
        android:background="@android:color/black"
        android:layout_below="@+id/textView5"
        android:layout_alignEnd="@+id/scrollView"
        android:layout_toEndOf="@+id/editText" />

</RelativeLayout>
